--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "author": "Brandon Kirincich",
   "license": "MIT",
-  "dependencies": {
-    "electron": "^7.1.7"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "electron": "^7.1.7",
     "electron-packager": "^14.1.1"
   }
 }
